--- a/lesson1.tex
+++ b/lesson1.tex
@@ -287,7 +287,8 @@ A \pr{:-} jelet itt úgy olvashatjuk ki, hogy
 ,,akkor, ha'', tehát ,,X anyja Y-nak akkor, ha X
 szülője Y-nak és X nő''. A baloldalon levő részt a
 szabály \emph{fej}\/ének, a jobboldalát a szabály
-\emph{törzs}\/ének nevezzük.\index{fej}\index{törzs}
+\emph{törzs}\/ének nevezzük.
+\index{\pr{:-}}\index{fej}\index{törzs}
 
 Mi történik, amikor feltesszük az alábbi kérdést?
 \begin{query}
