--- a/lesson3.tex
+++ b/lesson3.tex
@@ -252,7 +252,7 @@ listából?
 töröl(X, [X|M], M).
 töröl(X, [Y|M], [Y|M1]) :- töröl(X, M, M1).
 \end{program}
-\index{\pr{töröl}}
+\index{\pr{torol}@\pr{töröl}}
 Tehát: ha \pr{X} a lista első eleme, akkor a törlés
 után a lista maradékát kapjuk. Egyébként a lista
 első eleme és az eredmény első eleme megegyezik, és
