Better footnote marks

--- a/eloszo.tex
+++ b/eloszo.tex
@@ -64,7 +64,7 @@ következő kérdés feltevéséhez pedig ilyenkor egy újsor billentyűt kell
 nyomni.
 
 Bizonyos rendszerekben mindez kényelmesebben is megtehető, így pl.~az
-\name{SWI-Prolog} internetes \name{SWISH} verziójában,\footnote{\tt
+\name{SWI-Prolog} internetes \name{SWISH} verziójában,\footnote[2]{\tt
 https://swish.swi-prolog.org/} ahol a szabályok mindig automatikusan
 újraolvasódnak.
 
