--- a/lesson2.tex
+++ b/lesson2.tex
@@ -39,7 +39,7 @@ kell választani, ez leggyakrabban a \pr{42} (a
 \emph{Galaxis útikalauz stopposoknak} nyomán). Ilyen
 és hasonló programozó-szubkultúrával kapcsolatos
 érdekességekről rengeteget lehet olvasni a \emph{Zsargon
-  fájl}\/ban,\footnote{http://www.catb.org/jargon/html/}
+  fájl}\/ban,\footnote[2]{http://www.catb.org/jargon/html/}
 nagyon szórakoztató olvasmány. (Sajnos csak angolul,
 de sokszor nem is igazán lehetne lefordítani.)
 \index{foo--bar--baz}
