--- a/eloszo.tex
+++ b/eloszo.tex
@@ -83,7 +83,8 @@ származik az 5.~lecke összefésüléses példája (11.~fejezet), a
 6.~leckében a különbség-listák tárgyalása (15.1 fejezet), és a
 lecke végén található projekt (20.2 és 21.3 fejezetek).
 
-A 7.~lecke alapját képező forráskód az \name{SWI-Prolog}
+A 4.~leckében levő kígyó-kocka ötletét egy Haskell megoldás~[3] adta;
+a 7.~lecke alapját képező forráskód pedig az \name{SWI-Prolog}
 szoftvercsomag része.
 
 \begin{itemize}[leftmargin=2cm,itemindent=-1cm,labelsep=1cm-2em]
@@ -91,6 +92,8 @@ szoftvercsomag része.
 Intelligence}, 4th Ed., Pearson, 2011.
 \item[{[2]}] L.~Sterling, E.~Shapiro, \emph{The Art of Prolog}, 2nd
   Ed., MIT Press, 1994.
+\item[{[3]}] M.~P.~Jones: \emph{Solving the Snake Cube Puzzle in Haskell}.
+  Journal of Functional Programming 23(2), pp.~145--160, 2013.
 \end{itemize}
 
 \section*{Köszönetnyilvánítás}
