--- a/konyv.tex
+++ b/konyv.tex
@@ -43,6 +43,7 @@
 \newenvironment{infobox}[2]{
   \begin{tcolorbox}[center,
                     float,
+                    floatplacement=ht!,
                     fonttitle=\sffamily\bfseries,
                     title={\center Kitérő: \emph{#2}},
                     width=#1\linewidth]
