--- a/lesson1.tex
+++ b/lesson1.tex
@@ -80,7 +80,7 @@ formája a következő: a kapcsolat nevével kezdődik
 (most ez a \pr{szülő}), utána zárójelek között
 vesszővel elválasztva felsoroljuk a kapcsolatban
 levő dolgokat, és a végén egy ponttal (\pr{.})
-zárjuk.\index{tény}
+zárjuk.\index{teny@tény}
 
 Talán furcsa lehet, hogy minden kisbetűvel van --
 majd később lesz szó arról, hogy mik az elnevezés
@@ -127,7 +127,7 @@ azt is kiírja alá, hogy \pr{Kicsoda = zajnab}.
 Mi történt itt? Azáltal, hogy a második helyre egy
 nagybetűs szót (\pr{Kicsoda}) írtunk, azt mondtuk,
 hogy ez egy határozatlan, ismeretlen érték, egy
-\emph{változó}.\index{változó} A kérdést tehát
+\emph{változó}.\index{valtozo@változó} A kérdést tehát
 magyarul úgy lehetne megfogalmazni: ,,Mohamed kinek
 a szülője?''
 
@@ -288,7 +288,7 @@ A \pr{:-} jelet itt úgy olvashatjuk ki, hogy
 szülője Y-nak és X nő''. A baloldalon levő részt a
 szabály \emph{fej}\/ének, a jobboldalát a szabály
 \emph{törzs}\/ének nevezzük.
-\index{\pr{:-}}\index{fej}\index{törzs}
+\index{\pr{:-}}\index{fej}\index{torzs@törzs}
 
 Mi történik, amikor feltesszük az alábbi kérdést?
 \begin{query}
